<?php

declare(strict_types=1);

namespace DoctrineMigrations;

use Doctrine\DBAL\Schema\Schema;
use Doctrine\Migrations\AbstractMigration;

/**
 * Auto-generated Migration: Please modify to your needs!
 */
final class Version20260429133006 extends AbstractMigration
{
    public function getDescription(): string
    {
        return '';
    }

    public function up(Schema $schema): void
    {
        // this up() migration is auto-generated, please modify it to your needs
        $this->addSql('CREATE TABLE app_user (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, uid VARCHAR(26) NOT NULL, email VARCHAR(180) NOT NULL, pseudonym VARCHAR(30) NOT NULL, roles JSON NOT NULL, password VARCHAR(255) NOT NULL, created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE UNIQUE INDEX UNIQ_88BDF3E9539B0606 ON app_user (uid)');
        $this->addSql('CREATE UNIQUE INDEX UNIQ_88BDF3E9E7927C74 ON app_user (email)');
        $this->addSql('CREATE UNIQUE INDEX UNIQ_88BDF3E93654B190 ON app_user (pseudonym)');
        $this->addSql('CREATE TABLE building (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, type VARCHAR(16) NOT NULL, pos_x SMALLINT NOT NULL, pos_z SMALLINT NOT NULL, created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, city_id INT NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_E16F61D48BAC62AF ON building (city_id)');
        $this->addSql('CREATE UNIQUE INDEX building_position_unique ON building (city_id, pos_x, pos_z)');
        $this->addSql('CREATE TABLE city (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, uid VARCHAR(26) NOT NULL, name VARCHAR(80) NOT NULL, money INT NOT NULL, grid_size SMALLINT NOT NULL, created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, updated_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, user_id INT NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE UNIQUE INDEX UNIQ_2D5B0234539B0606 ON city (uid)');
        $this->addSql('CREATE INDEX IDX_2D5B0234A76ED395 ON city (user_id)');
        $this->addSql('CREATE TABLE game_score (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, uid VARCHAR(26) NOT NULL, score INT NOT NULL, money_final INT NOT NULL, population INT NOT NULL, ticks_played INT NOT NULL, share_token VARCHAR(26) DEFAULT NULL, created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, user_id INT NOT NULL, city_id INT DEFAULT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE UNIQUE INDEX UNIQ_AA4EDE539B0606 ON game_score (uid)');
        $this->addSql('CREATE UNIQUE INDEX UNIQ_AA4EDED6594DD6 ON game_score (share_token)');
        $this->addSql('CREATE INDEX IDX_AA4EDEA76ED395 ON game_score (user_id)');
        $this->addSql('CREATE UNIQUE INDEX UNIQ_AA4EDE8BAC62AF ON game_score (city_id)');
        $this->addSql('CREATE TABLE messenger_messages (id BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL, body TEXT NOT NULL, headers TEXT NOT NULL, queue_name VARCHAR(190) NOT NULL, created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, available_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, delivered_at TIMESTAMP(0) WITHOUT TIME ZONE DEFAULT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_75EA56E0FB7336F0E3BD61CE16BA31DBBF396750 ON messenger_messages (queue_name, available_at, delivered_at, id)');
        $this->addSql('ALTER TABLE building ADD CONSTRAINT FK_E16F61D48BAC62AF FOREIGN KEY (city_id) REFERENCES city (id) ON DELETE CASCADE NOT DEFERRABLE');
        $this->addSql('ALTER TABLE city ADD CONSTRAINT FK_2D5B0234A76ED395 FOREIGN KEY (user_id) REFERENCES app_user (id) ON DELETE CASCADE NOT DEFERRABLE');
        $this->addSql('ALTER TABLE game_score ADD CONSTRAINT FK_AA4EDEA76ED395 FOREIGN KEY (user_id) REFERENCES app_user (id) ON DELETE CASCADE NOT DEFERRABLE');
        $this->addSql('ALTER TABLE game_score ADD CONSTRAINT FK_AA4EDE8BAC62AF FOREIGN KEY (city_id) REFERENCES city (id) ON DELETE SET NULL NOT DEFERRABLE');
    }

    public function down(Schema $schema): void
    {
        // this down() migration is auto-generated, please modify it to your needs
        $this->addSql('ALTER TABLE building DROP CONSTRAINT FK_E16F61D48BAC62AF');
        $this->addSql('ALTER TABLE city DROP CONSTRAINT FK_2D5B0234A76ED395');
        $this->addSql('ALTER TABLE game_score DROP CONSTRAINT FK_AA4EDEA76ED395');
        $this->addSql('ALTER TABLE game_score DROP CONSTRAINT FK_AA4EDE8BAC62AF');
        $this->addSql('DROP TABLE app_user');
        $this->addSql('DROP TABLE building');
        $this->addSql('DROP TABLE city');
        $this->addSql('DROP TABLE game_score');
        $this->addSql('DROP TABLE messenger_messages');
    }
}
